fixed footer being off center

--- a/css/main.css
+++ b/css/main.css
@@ -106,7 +106,6 @@ body {
 	background-color: #4099FF;
 	color: white;
 	border-radius: 0px;
-	margin-left: 10px;
 	width: 100%;
 }
 
